Fix entity synonym overflow
Some synonyms do not have any normally breakable characters, so we have to allow for breaking on any character if a word would otherwise cause overflow.

Ref : Grounding popover overflow #541

--- a/src/styles/element-info/entity-info.css
+++ b/src/styles/element-info/entity-info.css
@@ -163,7 +163,8 @@ button.entity-info-edit {
 .entity-info-alt-name,
 .entity-info-formula {
   display: inline;
-
+  overflow-wrap: break-word;
+  
   &::after {
     content: '; ';
   }
